Adds (non-pipeline, at the moment) support for sf code-analyzer commands

--- a/extra-tests/classes/RollupCalculatorTests.cls
+++ b/extra-tests/classes/RollupCalculatorTests.cls
@@ -2271,6 +2271,7 @@ private class RollupCalculatorTests {
   private class RollupCalcEmptyMock extends RollupCalculator {
   }
 
+  @SuppressWarnings('PMD.ExcessiveParameterList')
   private static RollupCalculator getCalculator(
     Object priorVal,
     Rollup.Op operation,
