--- a/rollup/core/classes/RollupFinalizer.cls
+++ b/rollup/core/classes/RollupFinalizer.cls
@@ -43,6 +43,7 @@ public without sharing virtual class RollupFinalizer implements Finalizer {
     this.cabooses.add(caboose);
   }
 
+  @SuppressWarnings('PMD.EmptyStatementBlock')
   protected virtual void handleSuccess() {
   }
 
