--- a/rollup/core/classes/RollupFlowBulkSaver.cls
+++ b/rollup/core/classes/RollupFlowBulkSaver.cls
@@ -1,8 +1,5 @@
+@SuppressWarnings('PMD.AvoidGlobalModifier')
 global without sharing class RollupFlowBulkSaver {
-  private RollupFlowBulkSaver() {
-    // only used for static invocable
-  }
-
   @InvocableMethod(category='Rollups' label='Process Deferred Rollups')
   global static void processDeferredRollups() {
     Rollup.processStoredFlowRollups();
