--- a/extra-tests/classes/RollupCurrencyInfoTests.cls
+++ b/extra-tests/classes/RollupCurrencyInfoTests.cls
@@ -4,12 +4,10 @@ private class RollupCurrencyInfoTests {
   static void shouldNotHitDivideByZeroError() {
     RollupCurrencyInfo mockUsdInfo = new RollupCurrencyInfo();
     mockUsdInfo.ConversionRate = 0;
-    mockUsdInfo.DecimalPlaces = 2;
     mockUsdInfo.IsoCode = 'USD';
 
     RollupCurrencyInfo mockEurInfo = new RollupCurrencyInfo();
     mockEurInfo.ConversionRate = 0;
-    mockEurInfo.DecimalPlaces = 2;
     mockEurInfo.IsoCode = 'EUR';
 
     RollupCurrencyInfo.mockCurrencyData = new List<RollupCurrencyInfo>{ mockUsdInfo, mockEurInfo };
@@ -26,12 +24,10 @@ private class RollupCurrencyInfoTests {
   static void shouldFallbackToExistingAmountIfFieldIsNull() {
     RollupCurrencyInfo mockUsdInfo = new RollupCurrencyInfo();
     mockUsdInfo.ConversionRate = 0;
-    mockUsdInfo.DecimalPlaces = 2;
     mockUsdInfo.IsoCode = 'USD';
 
     RollupCurrencyInfo mockEurInfo = new RollupCurrencyInfo();
     mockEurInfo.ConversionRate = 0;
-    mockEurInfo.DecimalPlaces = 2;
     mockEurInfo.IsoCode = 'EUR';
 
     RollupCurrencyInfo.mockCurrencyData = new List<RollupCurrencyInfo>{ mockUsdInfo, mockEurInfo };
@@ -61,12 +57,10 @@ private class RollupCurrencyInfoTests {
     }
     RollupCurrencyInfo mockUsdInfo = new RollupCurrencyInfo();
     mockUsdInfo.ConversionRate = 1;
-    mockUsdInfo.DecimalPlaces = 2;
     mockUsdInfo.IsoCode = 'USD';
 
     RollupCurrencyInfo mockEurInfo = new RollupCurrencyInfo();
     mockEurInfo.ConversionRate = .75;
-    mockEurInfo.DecimalPlaces = 2;
     mockEurInfo.IsoCode = 'EUR';
 
     RollupCurrencyInfo.mockCurrencyData = new List<RollupCurrencyInfo>{ mockUsdInfo, mockEurInfo };
@@ -87,10 +81,7 @@ private class RollupCurrencyInfoTests {
     camp.BudgetedCost = 6;
     RollupCurrencyInfo.transform(new List<SObject>{ camp }, Campaign.BudgetedCost, mockEurInfo.IsoCode, new List<RollupOrderBy__mdt>());
     Campaign again = (Campaign) RollupCurrencyInfo.getCalcItem(camp, mockEurInfo.IsoCode);
-    System.assertEquals(
-      (mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.BudgetedCost)).setScale(mockEurInfo.DecimalPlaces),
-      again.BudgetedCost
-    );
+    System.assertEquals((mockEurInfo.ConversionRate / (mockUsdInfo.ConversionRate / camp.BudgetedCost)).doubleValue(), again.BudgetedCost);
   }
 
   @IsTest
@@ -100,11 +91,9 @@ private class RollupCurrencyInfoTests {
     }
     RollupCurrencyInfo mockUsdInfo = new RollupCurrencyInfo();
     mockUsdInfo.ConversionRate = 1;
-    mockUsdInfo.DecimalPlaces = 2;
     mockUsdInfo.IsoCode = 'USD';
     RollupCurrencyInfo mockEurInfo = new RollupCurrencyInfo();
     mockEurInfo.ConversionRate = .75;
-    mockEurInfo.DecimalPlaces = 2;
     mockEurInfo.IsoCode = 'EUR';
     RollupCurrencyInfo.mockCurrencyData = new List<RollupCurrencyInfo>{ mockUsdInfo, mockEurInfo };
 
@@ -124,7 +113,7 @@ private class RollupCurrencyInfoTests {
     if (RollupCurrencyInfo.isMultiCurrency() == false) {
       return;
     }
-    RollupCurrencyInfo.IS_DATED_MULTICURRENCY = true;
+    RollupCurrencyInfo.isDatedMultiCurrency = true;
 
     RollupCurrencyInfo usdInfo = new RollupCurrencyInfo();
     usdInfo.ConversionRate = 1;
@@ -173,7 +162,7 @@ private class RollupCurrencyInfoTests {
     if (RollupCurrencyInfo.isMultiCurrency() == false) {
       return;
     }
-    RollupCurrencyInfo.IS_DATED_MULTICURRENCY = true;
+    RollupCurrencyInfo.isDatedMultiCurrency = true;
 
     RollupCurrencyInfo usdInfo = new RollupCurrencyInfo();
     usdInfo.ConversionRate = 1;
@@ -211,5 +200,46 @@ private class RollupCurrencyInfoTests {
 
     OpportunityLineItem oli = (OpportunityLineItem) RollupCurrencyInfo.getCalcItem(oliToUpdate, eurPeriodOne.IsoCode);
     System.assertEquals(eurPeriodOne.ConversionRate / (usdInfo.ConversionRate / oliToUpdate.TotalPrice), oli.TotalPrice);
+  }
+
+  @IsTest
+  static void requeriesForBoundedDateRangesWhenChildrenDiffer() {
+    if (RollupCurrencyInfo.isMultiCurrency() == false) {
+      return;
+    }
+    RollupCurrencyInfo.isDatedMultiCurrency = true;
+
+    RollupCurrencyInfo usdInfo = new RollupCurrencyInfo();
+    usdInfo.ConversionRate = 1;
+    usdInfo.IsoCode = 'USD';
+    // default dated currency range - all time
+    usdInfo.StartDate = Date.newInstance(0, 12, 30);
+    usdInfo.NextStartDate = Date.newInstance(9999, 12, 31);
+    RollupCurrencyInfo eurPeriodOne = new RollupCurrencyInfo();
+    eurPeriodOne.ConversionRate = 1.1;
+    eurPeriodOne.IsoCode = 'EUR';
+    eurPeriodOne.StartDate = System.today().addDays(-10);
+    eurPeriodOne.NextStartDate = System.today().addDays(-5);
+    RollupCurrencyInfo eurPeriodTwo = new RollupCurrencyInfo();
+    eurPeriodTwo.ConversionRate = 1.2;
+    eurPeriodTwo.IsoCode = 'EUR';
+    eurPeriodTwo.StartDate = Date.newInstance(0, 12, 30);
+    eurPeriodTwo.NextStartDate = System.today().addDays(-10);
+    RollupCurrencyInfo.mockCurrencyData = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne };
+    Opportunity opp = new Opportunity(StageName = 'a', CloseDate = System.today().addDays(-7), Name = 'One', Amount = 14);
+    Opportunity secondOpp = new Opportunity(StageName = 'a', CloseDate = System.today().addYears(-7), Name = 'One', Amount = 14);
+    insert new List<Opportunity>{ opp, secondOpp };
+    opp = (Opportunity) RollupTestUtils.queryRecord(opp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+    secondOpp = (Opportunity) RollupTestUtils.queryRecord(secondOpp.Id, new List<Schema.SObjectField>{ Opportunity.Amount, Opportunity.CloseDate });
+
+    RollupCurrencyInfo.transform(new List<Opportunity>{ opp }, Opportunity.Amount, eurPeriodOne.IsoCode, new List<RollupOrderBy__mdt>());
+
+    opp = (Opportunity) RollupCurrencyInfo.getCalcItem(opp, eurPeriodOne.IsoCode);
+    System.assertEquals(15.4, opp.Amount);
+
+    RollupCurrencyInfo.mockCurrencyData = new List<RollupCurrencyInfo>{ usdInfo, eurPeriodOne, eurPeriodTwo };
+    RollupCurrencyInfo.transform(new List<Opportunity>{ secondOpp }, Opportunity.Amount, eurPeriodOne.IsoCode, new List<RollupOrderBy__mdt>());
+    secondOpp = (Opportunity) RollupCurrencyInfo.getCalcItem(secondOpp, eurPeriodOne.IsoCode);
+    System.assertEquals(16.8, secondOpp.Amount);
   }
 }
